--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,8 @@
     <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
     <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <link href="https://fonts.googleapis.com/css?family=Palanquin+Dark:500" rel="stylesheet">
 
     <link rel="stylesheet" href="/css/styles.css">
     <script src="/js/vendor/modernizr-2.8.3.min.js"></script>
