--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,40 @@
 <!doctype html>
+
 <html class="no-js" lang="">
+
     {% include head.html %}
+
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        {% include nav-menu.html %}
+        <div class="off-canvas-wrapper">
 
-        {{ content }}
+            <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
 
-        {% include footer.html %}
+                {% include title-bar.html %}
+
+                <div class="off-canvas-content" data-off-canvas-content>
+
+                    {% include header.html %}
+
+                    <div class="main-content">
+
+                        {{ content }}
+
+                    </div>
+
+                    {% include footer.html %}
+
+                </div>
+
+            </div>
+
+        <div>
 
         {% include scripts.html %}
+
     </body>
+
 </html>
