--- a/_scss/_main.scss
+++ b/_scss/_main.scss
@@ -1,5 +1,5 @@
 @import 'settings';
-@import '../node_modules/foundation-sites/scss/foundation';
+@import 'foundation/foundation';
 
 @include foundation-everything;
 
