--- a/_scss/_settings.scss
+++ b/_scss/_settings.scss
@@ -40,7 +40,7 @@
 //  35. Tooltip
 //  36. Top Bar
 
-@import '../node_modules/foundation-sites/scss/util/util';
+@import 'foundation/util/util';
 
 // 1. Global
 // ---------
