--- a/_includes/title-bar.html
+++ b/_includes/title-bar.html
@@ -1,5 +1,5 @@
 <!-- off-canvas title bar for 'small' screen -->
-<div class="title-bar" data-responsive-toggle="widemenu" data-hide-for="medium">
+<div class="title-bar hide-for-medium" data-responsive-toggle="widemenu">
     <div class="title-bar-left">
         <button class="menu-icon" type="button" data-open="offCanvasLeft"></button>
         <span class="title-bar-title">Mohandessi Psych, LLC</span>
