--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,4 +27,10 @@
 
     </div>
 
+    <div class="row">
+        <div class="column">
+            <div>Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+        </div>
+    </div>
+
 </footer>
